Updated java options manage. Fixes #229